--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
     url: jdbc:mariadb://localhost:13307/gooinprodb
     username: gooinprodbuser
     password: gooinprodbuser
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/gooinprochatdb
 
     hikari:
       minimum-idle: 2
