feat: admin CRUD function add

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+org:
+  gooinpro:
+    accessTime: 30
+    refreshTime: 10000
+    alwaysNew: true
