--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,8 @@ spring:
     password: gooinprodbuser
   data:
     mongodb:
-      uri: mongodb://gooinprochatdbuser:gooinprochatdbuser@localhost:27017/gooinprochatdb
+      uri: mongodb://gooinprochatdbuser:gooinprochatdbuser@localhost:27017/gooinprochatdb?autoSource=gooinprochatdb
+
 
     hikari:
       minimum-idle: 2
